feat: load native library